--- a/unit03/css/style.css
+++ b/unit03/css/style.css
@@ -3,10 +3,10 @@
     font-weight: 400;
 }
 header {
-    /* background-image: url(../images/numbers.jpg); */
+    background-image: url(../images/numbers.jpg);
     background-repeat: no-repeat;
     max-width: 960px;
-    height: 2500px;
+    height: 250px;
     margin: 0 auto;
 }
 header h1 {
