--- a/unit03/css/style.css
+++ b/unit03/css/style.css
@@ -25,13 +25,13 @@ main {
     background-color: #f2f2f2;
 }
 h1 {
-    color: #78b4b4;
+    color: #0EBFE9;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
 }
 h2 {
-    color: #78b4b4;
+    color: #0EBFE9;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
@@ -45,7 +45,7 @@ footer {
     width: 960px;
     height: 35px;
     margin: 0 auto;
-    background-color: #78b4b4;
+    background-color: #0EBFE9;
     text-align: center;
 }
 footer p {
