Styled the guessing game section

--- a/unit03/css/style.css
+++ b/unit03/css/style.css
@@ -52,3 +52,40 @@ footer p {
     font-size: 14px;
     padding-top: 9px;
 }
+
+/* Game Section Styles */
+#flex {
+    display: flex;
+    justify-content: space-evenly;
+    height: 225px;
+    padding-bottom: 2rem;
+    background-color: #d3d3d3;
+}
+#flex h2 {
+    text-align: center;
+    padding: 0;
+}
+#guess {
+    margin-top: .5rem;
+    font-size: 1.5rem;
+    width: 120px;
+    text-align: center;
+    border: 1px solid #000;
+}
+button {
+    margin-top: 0;
+    height: 30px;
+    width: 75px;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 600;
+    background-color: #0EBFE9;
+    border-radius: 5px;
+}
+#attempts {
+    font-size: 2rem;
+    text-align: center;
+}
+#feedback {
+    text-align: center;
+}
