Random number generator js + color changes

--- a/unit04/css/style.css
+++ b/unit04/css/style.css
@@ -3,7 +3,7 @@
     font-weight: 400;
 }
 header {
-    background-image: url(../images/numbers.jpg);
+    background-image: url();
     background-repeat: no-repeat;
     max-width: 960px;
     height: 200px;
@@ -25,13 +25,13 @@ main {
     background-color: #f2f2f2;
 }
 h1 {
-    color: #0EBFE9;
+    color: #820e57;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
 }
 h2 {
-    color: #0EBFE9;
+    color: #820e57;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
@@ -45,7 +45,8 @@ footer {
     width: 960px;
     height: 35px;
     margin: 0 auto;
-    background-color: #0EBFE9;
+    color: #fff;
+    background-color: #820e57;
     text-align: center;
 }
 footer p {
