Changed header, added html tree elements

--- a/unit05/css/style.css
+++ b/unit05/css/style.css
@@ -3,7 +3,7 @@
     font-weight: 400;
 }
 header {
-    background-image: url(../images/fortune_teller.jpg);
+    background-image: url(../images/tree.jpg);
     background-repeat: no-repeat;
     max-width: 960px;
     height: 200px;
@@ -25,13 +25,13 @@ main {
     background-color: #f2f2f2;
 }
 h1 {
-    color: #820e57;
+    color: #3CB371;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
 }
 h2 {
-    color: #820e57;
+    color: #3CB371;
     margin: 0;
     padding: 1rem 0 0 1rem;
     font-weight: 600;
@@ -46,7 +46,7 @@ footer {
     height: 35px;
     margin: 0 auto;
     color: #fff;
-    background-color: #820e57;
+    background-color: #3CB371;
     text-align: center;
 }
 footer p {
