Fixed span tags

--- a/unit06/css/style.css
+++ b/unit06/css/style.css
@@ -71,7 +71,7 @@ textarea {
     line-height: 1.5rem;
 }
 #story span {
-    color: #3f85c7;
+    color: #003EFF;
     font-weight: bold;
 }
 button {
