Added images, json, js

--- a/unit10/css/style.css
+++ b/unit10/css/style.css
@@ -3,7 +3,7 @@
     font-weight: 400;
 }
 header {
-    background-image: url(../images/grantstomb.jpg);
+    background-image: url(../images/hotel_header.jpg);
     background-repeat: no-repeat;
     max-width: 960px;
     height: 200px;
@@ -35,6 +35,10 @@ h2 {
     padding: 1rem 0 0 1rem;
     font-weight: 600;
 }
+h3 {
+    padding: 1rem 0 0 1rem;
+    font-weight: 600;
+}
 p {
     margin: 0;
     padding: 1rem;
@@ -54,14 +58,13 @@ footer p {
     padding-top: 9px;
 }
 
-/* Grant's Tomb Styles */
+/* Hotel Booking Styles */
 #stem {
     padding: .5rem 0 .5rem 2rem;
     font-size: 1.5rem;
 }
 button{
-    display: block;
-    margin: .5rem 0 .5rem 2rem;
+    margin: .5rem .5rem .5rem 0;
     padding: .5rem;
     font-size: 1rem;
     background-color: #fff;
@@ -73,8 +76,4 @@ button:hover {
     color: #fff;
     transition-duration: .4s;
 }
-#feedback {
-    font-size: 1.5rem;
-    color: red;
-    padding: .5rem 0 1rem 2rem;
-}
+
